# vaultlite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: audit_trail.py  basic_usage.py  envelope_encryption.py  policy_management.py  secret_rotation.py
tests/: test_aes.py  test_api.py  test_audit.py  test_auth.py  test_envelope.py  test_kdf.py  test_lease.py  test_mac.py  test_modes.py  test_padding.py  test_policy.py  test_seal.py  test_store.py  test_vault.py  test_versioning.py
vaultlite/: __init__.py  __main__.py  api.py  audit.py  auth.py  cli.py  errors.py  lease.py  policy.py  seal.py  store.py  types.py  utils.py  vault.py  versioning.py
vaultlite/crypto/: __init__.py  aes.py  envelope.py  kdf.py  mac.py  modes.py  padding.py
