[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vaultlite"
version = "1.0.0"
description = "Lightweight secrets manager with AES-128 from scratch"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Haji Rufai"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
